docs: link fixes

--- a/src/pages/contributing/bugs-and-requests.mdx
+++ b/src/pages/contributing/bugs-and-requests.mdx
@@ -66,5 +66,4 @@ appropriate. Read more about our
 ## Need more help?
 
 If you have more questions about issues or requesting a features, there are
-multiple ways to reach us at
-[Support](https://www.carbondesignsystem.com/help/support).
+multiple ways to reach us at [Contact us](/help/contact-us).
