--- a/src/pages/contributing/component/index.mdx
+++ b/src/pages/contributing/component/index.mdx
@@ -686,9 +686,8 @@ Check out
 creating a symbol.
 
 This symbol can be contributed with the asset or enhancement, but must be added
-to the kit by one of its
-[maintainers](/how-to-contribute/overview/overview#maintainers). To contribute a
-symbol, simply open an issue in the
+to the kit by one of its maintainers. To contribute a symbol, simply open an
+issue in the
 [kit repo](https://github.com/carbon-design-system/carbon-design-kit/issues).
 
 #### 4. Usage documentation
