--- a/src/pages/help/contact-us/index.mdx
+++ b/src/pages/help/contact-us/index.mdx
@@ -66,9 +66,7 @@ GitHub issue.
 ### GitHub pull requests
 
 If you have a specific fix or a contribution, you can generate a pull request in
-the appropriate Carbon repo:
-
-\*\* include a list here, check with Alison what should be included
+the appropriate Carbon repo.
 
 ## Start a new discussion
 
