update left nav link and homepage image paths

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -118,7 +118,7 @@ building websites and user interfaces. See a
     href="https://medium.com/carbondesign/seven-new-ux-patterns-for-carbon-f4a18c20c535"
     >
 
-![New ux patterns announcement](resources/images/patterns_announcement.png)
+![New ux patterns announcement](whats-happening/news-and-articles/images/patterns_announcement.png)
 
 </ArticleCard>
 </Column>
@@ -145,7 +145,7 @@ building websites and user interfaces. See a
     href="https://medium.com/carbondesign/october-release-fadc38b757ad"
     >
 
-![New in Carbon article](resources/images/v10.7-release.png)
+![New in Carbon article](whats-happening/news-and-articles/images/v10.7-release.png)
 
 </ArticleCard>
 </Column>
