docs: updates to get started design, how we work, contributing overview

--- a/src/pages/all-about-carbon/how-we-work.mdx
+++ b/src/pages/all-about-carbon/how-we-work.mdx
@@ -13,6 +13,46 @@ core team and governed by a board of design advisors.
 
 </PageDescription>
 
+<AnchorLinks>
+  <AnchorLink>Code of conduct</AnchorLink>
+  <AnchorLink>Adoption</AnchorLink>
+  <AnchorLink>Assets</AnchorLink>
+  <AnchorLink>Contact us</AnchorLink>
+</AnchorLinks>
+
+## Code of conduct
+
+### The core team's promise
+
+Carbon is funded and built by IBM. Although that means we build for the
+company's business needs, it also means we have a brilliant team of engineers
+and designers working full time to make Carbon better. As one of the world's
+largest companies, IBM has thousands of people across the globe using and
+contributing to Carbon.
+
+We use what we build, and we've made it open source for anyone to use and
+contribute back to.
+
+### Who is the Code of conduct for?
+
+The Carbon Design System is built for everybody and if you use or contribute to
+Carbon, you are part of this community and we expect you to adhere to our
+community standards.
+
+### Feedback and critique
+
+Building great products isn't easy, and there's usually more than one right
+answer. If you're taking part in any discussion, whether on Slack, Twitter,
+Gitter, GitHub, or even in person, please respect one another. Keep the mission
+in mind, and help us make Carbon better.
+
+### Be understanding
+
+Differing needs and differing perspectives make Carbon comprehensive. Be
+welcoming, be understanding, and be kind. If one user expresses frustrations or
+complications, there are likely dozens of others who feel the same way.
+Encourage community members to speak up.
+
 ## Adoption
 
 **We conduct training classes and offer certifications.** These cover
@@ -28,8 +68,7 @@ blog posts, and Twitter.
 
 **Contributed components and patterns include a list of maintainers.** The
 Carbon team triages and supports maintenance requests that do not have a
-maintainer. Unmaintained patterns will be demoted to Experimental if the Carbon
-team decides not to maintain them.
+maintainer.
 
 **We provide support for users of the design system.** The Carbon team engages
 with users primarily through GitHub. A member of the Carbon team responds to all
@@ -55,3 +94,8 @@ primary maintainers:
 **Design patterns are harvested from products built with Carbon.** These become
 part of the design system. Teams can use these well-defined patterns in their
 work and contribute patterns back to the system.
+
+## Contact us
+
+Have questions? Found a bug? Learn where to go and what to do by visiting the
+[Contact us page](/help/contact-us).
