docs: updates to get started design, contributing

--- a/src/pages/contributing/overview.mdx
+++ b/src/pages/contributing/overview.mdx
@@ -20,6 +20,7 @@ Here's how you can contribute too.
 <AnchorLink>Working in the open</AnchorLink>
 <AnchorLink>The Carbon community</AnchorLink>
 <AnchorLink>Project workflow</AnchorLink>
+<AnchorLink>Contributor License Agreement</AnchorLink>
 
 </AnchorLinks>
 
@@ -98,3 +99,10 @@ Carbon Design System projects typically use a
 [fork and pull request workflow](https://guides.github.com/activities/forking/)
 for contributions. Specific instructions can be found in each project’s GitHub
 `CONTRIBUTING.md` file.
+
+## Contributor License Agreement
+
+The Carbon core team works for IBM. To accept contributions, we need a signed
+Contributor License Agreement (CLA) from you before code contributions can be
+reviewed and merged. If you have questions, please don't hesitate
+to [reach out](/help/contact-us).
