--- a/src/pages/designing/get-started.mdx
+++ b/src/pages/designing/get-started.mdx
@@ -2,3 +2,86 @@
 title: Get started
 description:
 ---
+
+<PageDescription>
+
+Welcome to Carbon! If you're just starting out designing with Carbon, you're in
+the right place. Here's a checklist of everything you need to get up and
+running.
+
+</PageDescription>
+
+<AnchorLinks>
+
+<AnchorLink>First steps</AnchorLink>
+<AnchorLink>Learn more</AnchorLink>
+<AnchorLink>Connect with us</AnchorLink>
+
+</AnchorLinks>
+
+## First steps
+
+### Install your design kit
+
+Our primary design kit is Sketch but we have Adobe XD and Axure kits available
+too. Head on over to the Design kits section and follow the install instructions
+to get set up.
+
+### Check out other tools and resources
+
+In Other resources, you'll find the four IBM theme libraries, the IBM Design
+Language and icon libraries, color palettes, grid and shell templates, the IBM
+Plex font, and the Github repos.
+
+## Learn more
+
+### Understand the IBM Design Language
+
+Carbon expresses the [IBM Design Language](https://www.ibm.com/design/language/)
+in product and delivers it through tools for designers and developers including
+guidance, tooling, components, and support. Take the time to read the design
+language site so that you fully understand what drives IBM’s design philosophy
+and principles, and can make informed decisions in your product work.
+
+### Review our detailed usage guidance
+
+Carbon provides in-depth design usage and style guidance for
+[all components](/components/overview). It's important to be familiar with this
+additional UX and visual guidance when you are designing with our components.
+
+We also offer a range of key [patterns](/patterns/overview)—best practice
+solutions for how a user achieves a goal. These design patterns have been
+harvested from products built with Carbon, and have been reviewed and approved
+for use by the Carbon governance team.
+
+## Connect with us
+
+### Join us and the Carbon community
+
+If you have a question about any aspect of the kits or tools, you can reach out
+to us on Slack and use that as a way to connect with your fellow designers.
+Chances are someone has had a similar problem to you and will jump in to help
+you out.
+
+- #carbon-design-system
+- #carbon-components
+- #carbon-elements
+- #carbon-tutorial
+
+And be sure to sign up for the latest Carbon news at #carbon-announcements.
+
+You can also see the Carbon's latest changes and future plans in
+[What's happening](/changelog-and-roadmap/index.mdx).
+
+If you have a question, here are all the ways to [contact us](/help/contact-us).
+
+### Join us at an event
+
+Attend one of our [events](/whats-happening/events) to connect with us and level
+up your skills. The weekly design playback is great for getting feedback on work
+in progress from a group of designers and design leaders dedicated to your
+success.
+
+We will be adding more Events moving forward, but if there's something in
+particular you're interested in,
+[let us know](https://github.com/carbon-design-system/carbon-website/issues/new/choose).
