docs: about carbon content updates

--- a/src/pages/all-about-carbon/what-is-carbon.mdx
+++ b/src/pages/all-about-carbon/what-is-carbon.mdx
@@ -26,9 +26,13 @@ community of contributors.
 ## Introduction
 
 As IBM's official design system, Carbon serves a wide range of designers and
-developers building digital products and experiences. It is maintained by a core
-team of designers, developers, and writers based in the Austin, Texas IBM Design
-Studio.
+developers building digital products and experiences.
+
+Carbon is funded and built by IBM. Although that means we build for the
+company's business needs, it also means we have a brilliant team of engineers
+and designers working full time to make Carbon better. It is maintained by a
+core team of designers, developers, and writers based in the Austin, Texas IBM
+Design Studio.
 
 The goals of the design system include improving UI consistency and quality,
 making the design and development process more efficient and focused,
