docs: content tweaks, links added

--- a/src/pages/designing/get-started.mdx
+++ b/src/pages/designing/get-started.mdx
@@ -14,7 +14,7 @@ running.
 <AnchorLinks>
 
 <AnchorLink>First steps</AnchorLink>
-<AnchorLink>Learn more</AnchorLink>
+<AnchorLink>Additional guidance</AnchorLink>
 <AnchorLink>Connect with us</AnchorLink>
 
 </AnchorLinks>
@@ -33,7 +33,7 @@ In Other resources, you'll find the four IBM theme libraries, the IBM Design
 Language and icon libraries, color palettes, grid and shell templates, the IBM
 Plex font, and the Github repos.
 
-## Learn more
+## Additional guidance
 
 ### Understand the IBM Design Language
 
@@ -45,14 +45,14 @@ and principles, and can make informed decisions in your product work.
 
 ### Review our detailed usage guidance
 
-Carbon provides in-depth design usage and style guidance for
-[all components](/components/overview). It's important to be familiar with this
-additional UX and visual guidance when you are designing with our components.
+- [Components](/components/overview): Carbon provides in-depth design usage and
+  style guidance for all components. It's important to be familiar with this
+  additional UX and visual guidance when you are designing with our components.
 
-We also offer a range of key [patterns](/patterns/overview)—best practice
-solutions for how a user achieves a goal. These design patterns have been
-harvested from products built with Carbon, and have been reviewed and approved
-for use by the Carbon governance team.
+- [Patterns](/patterns/overview): We also offer a range of key patterns—best
+  practice solutions for how a user achieves a goal. These design patterns have
+  been harvested from products built with Carbon, and have been reviewed and
+  approved for use by the Carbon governance team.
 
 ## Connect with us
 
@@ -63,10 +63,10 @@ to us on Slack and use that as a way to connect with your fellow designers.
 Chances are someone has had a similar problem to you and will jump in to help
 you out.
 
-- #carbon-design-system
-- #carbon-components
-- #carbon-elements
-- #carbon-tutorial
+- [#carbon-design-system](https://ibm-studios.slack.com/messages/C0M053VPT/)
+- [#carbon-components](https://ibm-studios.slack.com/archives/C046Y0YUD)
+- [#carbon-elements](https://ibm-studios.slack.com/archives/CDHHNNZQR)
+- [#carbon-tutorial](https://ibm-studios.slack.com/archives/CJUGA7P6H)
 
 And be sure to sign up for the latest Carbon news at #carbon-announcements.
 
