Updates-to-community-remove-pattern

--- a/src/pages/community/patterns/remove-pattern/index.mdx
+++ b/src/pages/community/patterns/remove-pattern/index.mdx
@@ -119,6 +119,15 @@ not be required.
 </Column>
 </Row>
 
+<Row>
+<Column colLg={8}>
+
+![Low impact delete options requiring overrides to Carbon](images/LowImpactDelete2.png)
+
+<Caption>Low impact delete options requiring overrides to Carbon</Caption>
+</Column>
+</Row>
+
 ## Medium-impact removal
 
 Removing has a medium impact when the action can't be reversed, and could have
@@ -152,6 +161,16 @@ required.
 ![Example of remove options in context without warnings for low impact remove actions.](images/LowImpactRemove.png)
 
 <Caption> Example low impact remove options</Caption>
+
+</Column>
+</Row>
+
+<Row>
+<Column colLg={8}>
+
+![Low impact remove options requiring overrides to Carbon.](images/LowImpactRemove2.png)
+
+<Caption>Low impact remove options requiring overrides to Carbon.</Caption>
 
 </Column>
 </Row>
