docs: designing get started, news & articles

--- a/src/pages/whats-happening/news-and-articles/index.mdx
+++ b/src/pages/whats-happening/news-and-articles/index.mdx
@@ -1,23 +1,23 @@
 ---
-title: News & reading
+title: News and articles
 description:
-  Learn about some of Carbon's bigger projects and take a peek at our current
-  reading list of favorite books and articles.
+  Learn about some of Carbon's bigger projects and read other articles of
+  interest about design systems.
 ---
 
 <PageDescription>
 
-Learn about some of Carbon's bigger projects and take a peek at our current
-reading list of favorite books and articles.
+Learn about some of Carbon's bigger projects and read other articles of interest
+about design systems.
 
 </PageDescription>
 
 <AnchorLinks>
-  <AnchorLink>Medium articles</AnchorLink>
-  <AnchorLink>What we're reading</AnchorLink>
+  <AnchorLink>Latest news</AnchorLink>
+  <AnchorLink>Books and articles</AnchorLink>
 </AnchorLinks>
 
-## Medium articles
+## Latest news
 
 <Row>
 
@@ -238,9 +238,23 @@ reading list of favorite books and articles.
 </Column>
 </Row>
 
-## What we're reading
+## Books and articles
 
 <Row>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+
+<ArticleCard
+    title="Design + Open Source"
+    author="Gaby Moreno Cesar"
+    date="August 11, 2020"
+    href="https://medium.com/design-ibm/design-open-source-lessons-from-a-year-of-contributing-to-the-kubernetes-project-a85120acc890"
+    >
+
+![](/images/kubernetes_16x9.png)
+
+</ArticleCard>
+</Column>
+
 <Column colLg={4} colMd={4}  noGutterMdLeft>
   <ArticleCard
     title="Writing Is Designing"
