--- a/src/pages/designing/get-started.mdx
+++ b/src/pages/designing/get-started.mdx
@@ -23,15 +23,22 @@ running.
 
 ### Install your design kit
 
-Our primary design kit is Sketch but we have Adobe XD and Axure kits available
-too. Head on over to the Design kits section and follow the install instructions
-to get set up.
+Our primary design kit is [Sketch](/designing/kits/sketch) and we also
+[Adobe XD](/designing/kits/adobe-xd) and [Axure](/designing/kits/axure) kits
+available. Head on over to the Design kits section and follow the install
+instructions to get set up.
+
+These kits come with Carbon components so you don't have to build them. By using
+the kits you automatically get any updates made by the Carbon team so you don't
+need to go back and change any designs to match the latest release. And when
+handing off to your developers there won't be confusion about the component and
+its behaviors.
 
 ### Check out other tools and resources
 
-In Other resources, you'll find the four IBM theme libraries, the IBM Design
-Language and icon libraries, color palettes, grid and shell templates, the IBM
-Plex font, and the Github repos.
+In [Other resources](/designing/design-resources), you'll find links to the IBM
+Design Language and icon libraries, color palettes, grid and shell templates,
+the IBM Plex font, and the Github repos.
 
 ## Additional guidance
 
@@ -44,6 +51,9 @@ language site so that you fully understand what drives IBM’s design philosophy
 and principles, and can make informed decisions in your product work.
 
 ### Review our detailed usage guidance
+
+Our usage guidance is detailed and thorough, and you'll learn a lot about the
+system by reading through the components and patterns documentation.
 
 - [Components](/components/overview): Carbon provides in-depth design usage and
   style guidance for all components. It's important to be familiar with this
@@ -58,22 +68,25 @@ and principles, and can make informed decisions in your product work.
 
 ### Join us and the Carbon community
 
-If you have a question about any aspect of the kits or tools, you can reach out
-to us on Slack and use that as a way to connect with your fellow designers.
-Chances are someone has had a similar problem to you and will jump in to help
-you out.
+_For IBMers only:_ If you have a question about any aspect of the kits or tools,
+you can reach out to us on Slack and use that as a way to connect with your
+fellow designers. Chances are someone has had a similar problem to you and will
+jump in to help you out.
 
 - [#carbon-design-system](https://ibm-studios.slack.com/messages/C0M053VPT/)
 - [#carbon-components](https://ibm-studios.slack.com/archives/C046Y0YUD)
 - [#carbon-elements](https://ibm-studios.slack.com/archives/CDHHNNZQR)
 - [#carbon-tutorial](https://ibm-studios.slack.com/archives/CJUGA7P6H)
 
-And be sure to sign up for the latest Carbon news at #carbon-announcements.
+And be sure to sign up for the latest Carbon news at
+[#carbon-announcements](https://ibm-studios.slack.com/archives/CJ35H36MP).
 
-You can also see the Carbon's latest changes and future plans in
+### Learn about what we're doing
+
+To read about Carbon's latest changes and future plans, check out
 [What's happening](/changelog-and-roadmap/index.mdx).
 
-If you have a question, here are all the ways to [contact us](/help/contact-us).
+If you have questions, here are all the ways to [contact us](/help/contact-us).
 
 ### Join us at an event
 
@@ -83,5 +96,5 @@ in progress from a group of designers and design leaders dedicated to your
 success.
 
 We will be adding more Events moving forward, but if there's something in
-particular you're interested in,
-[let us know](https://github.com/carbon-design-system/carbon-website/issues/new/choose).
+particular you're interested in, we'd love to
+[hear from you](https://github.com/carbon-design-system/carbon-website/issues/new/choose).
