--- a/src/pages/whats-happening/changelog-and-roadmap/index.mdx
+++ b/src/pages/whats-happening/changelog-and-roadmap/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Changelog & roadmap
+title: Changelog and roadmap
 description:
   Read about the latest updates and learn more about what the team has planned
   for Carbon’s future.
