docs: broken link fixes

--- a/src/pages/designing/get-started.mdx
+++ b/src/pages/designing/get-started.mdx
@@ -84,7 +84,7 @@ And be sure to sign up for the latest Carbon news at
 ### Learn about what we're doing
 
 To read about Carbon's latest changes and future plans, check out
-[What's happening](/changelog-and-roadmap/index.mdx).
+[What's happening](/whats-happening/changelog-and-roadmap).
 
 If you have questions, here are all the ways to [contact us](/help/contact-us).
 
