--- a/src/pages/help/migration-guide/design.mdx
+++ b/src/pages/help/migration-guide/design.mdx
@@ -67,7 +67,7 @@ same time, you should avoid using v10 symbols in an app designed with v9.
 
 ### Setting up the kit
 
-Head over to the [Get started guide](/get-started/design/sketch#get-the-kit) to
+Head over to [Design kits](/designing/kits/sketch) to
 set up the new Sketch libraries.
 
 ## Elements
@@ -146,7 +146,7 @@ should abide by these standards.
 
 ### Layout, grid, and spacing
 
-Carbon v10 uses the 16 column [2x Grid](/guidelines/2x-grid/basics). Carbon v10
+Carbon v10 uses the 16 column [2x Grid](/guidelines/2x-grid/overview). Carbon v10
 will default to the 12-column grid with an option to switch to the 16-column
 grid. Designers starting on new layouts using v10 should use the 16-column grid.
 
