--- a/src/pages/help/migration-guide/develop.mdx
+++ b/src/pages/help/migration-guide/develop.mdx
@@ -26,7 +26,7 @@ Carbon code now lives in a monorepo.
 [Carbon-themes](https://github.com/carbon-design-system/carbon-themes) was
 deprecated in v10, and the themes package
 [@carbon/themes](https://github.com/carbon-design-system/carbon/tree/master/packages/themes)
-now lives in the [Carbon](https://github.com/carbon-design-system/carbon) Carbon
+now lives in the [Carbon](https://github.com/carbon-design-system/carbon) 
 monorepo.
 
 <Row className="resource-card-group">
