--- a/src/pages/contributing/bugs-and-requests.mdx
+++ b/src/pages/contributing/bugs-and-requests.mdx
@@ -52,7 +52,7 @@ unsure which repo to use, please open an issue in the
 
 If you have a specific fix or contribution, start by generating a pull request
 in the appropriate
-[Carbon repo](https://www.carbondesignsystem.com/resources#development-resources).
+[Carbon repo](/developing/dev-resources#github-repos).
 Here are detailed
 [instructions](https://github.com/carbon-design-system/carbon-website/wiki/Creating-a-PR-through-github.com-UI)
 for forking the repo and opening a pull request.
