--- a/src/pages/developing/angular-tutorial/step-2.mdx
+++ b/src/pages/developing/angular-tutorial/step-2.mdx
@@ -486,7 +486,7 @@ that, add:
 ```
 
 Referencing the
-[spacing token table](https://www.carbondesignsystem.com/guidelines/spacing#spacing-scale),
+[spacing token table](/guidelines/spacing/overview#spacing-scale),
 `16px` can be set with the `$spacing-05` token. The design calls for `128px` of
 space below the heading and that's not in the spacing scale, we can achieve that
 in Sass by multiplying 32px (`$spacing-07`) by 4. We could use `128px` or `8rem`
