--- a/src/pages/developing/dev-resources/index.mdx
+++ b/src/pages/developing/dev-resources/index.mdx
@@ -17,17 +17,7 @@ your framework of choice.
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Carbon Components"
-    href="https://github.com/carbon-design-system/carbon-components"
-    >
-
-<MdxIcon name="github" />
-
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Carbon Components React"
+    subTitle="Carbon React components"
     href="https://github.com/carbon-design-system/carbon-components-react"
     >
 
@@ -37,7 +27,7 @@ your framework of choice.
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Carbon Components Angular"
+    subTitle="Carbon Angular components"
     href="https://github.com/IBM/carbon-components-angular"
     >
 
@@ -47,7 +37,17 @@ your framework of choice.
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Carbon Components Vue"
+    subTitle="Carbon Vanilla components"
+    href="https://github.com/carbon-design-system/carbon-components"
+    >
+
+<MdxIcon name="github" />
+
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Carbon Vue components"
     href="https://github.com/carbon-design-system/carbon-components-vue"
     >
 
@@ -89,21 +89,21 @@ your framework of choice.
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-      subTitle="Carbon Vue Storybook"
-      href="http://vue.carbondesignsystem.com/"
-      >
-
-<MdxIcon name="vue" />
-
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
       subTitle="Carbon Angular Storybook"
       href="http://angular.carbondesignsystem.com/"
       >
 
 <MdxIcon name="angular" />
+
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Carbon Vue Storybook"
+      href="http://vue.carbondesignsystem.com/"
+      >
+
+<MdxIcon name="vue" />
 
   </ResourceCard>
 </Column>
