--- a/src/pages/developing/vue-tutorial/step-2.mdx
+++ b/src/pages/developing/vue-tutorial/step-2.mdx
@@ -396,7 +396,7 @@ for now.
 
 We've added basic layout styles in `LandingPage.vue`, so now let's add type,
 color and spacing styles to match the design. We'll be using our
-[spacing tokens](https://www.carbondesignsystem.com/guidelines/spacing). In a
+[spacing tokens](/guidelines/spacing/overview#spacing-scale). In a
 new file `src/styles/_carbon-utils.scss`, add these imports at the **top** of
 the file so we can use Carbon breakpoints, tokens, and typography Sass mixins
 and functions:
@@ -446,7 +446,7 @@ with the other imports and
 ```
 
 Referencing the
-[spacing token table](https://www.carbondesignsystem.com/guidelines/spacing#spacing-scale),
+[spacing token table](/guidelines/spacing/overview#spacing-scale),
 `16px` can be set with the `$spacing-05` token. The design calls for `128px` of
 space below the heading and that's not in the spacing scale, we can achieve that
 in Sass by multiplying 32px (`$spacing-07`) by 4. We could use `128px` or `8rem`
