--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -47,34 +47,22 @@ export default HomepageTemplate;
 ### Other resources
 
 The component libraries give developers a collection of reusable components for
-building websites and user interfaces. See a
-[complete list of resources.](/resources)
+building websites and user interfaces.
 
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     color="dark"
-    subTitle="Sketch libraries"
+    subTitle="Sketch kits"
     href="/designing/kits/sketch"
     >
       <MdxIcon name="sketch" />
   </ResourceCard>
 </Column>
-<Column colLg={4} colMd={4}  noGutterSm>
-  <ResourceCard
-    color="dark"
-    subTitle="Carbon Components"
-    href="https://github.com/carbon-design-system/carbon/tree/master/packages/components"
-    >
-
-<MdxIcon name="github" color="inverse" />
-
-  </ResourceCard>
-</Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     color="dark"
-    subTitle="Carbon Components React"
+    subTitle="Carbon React components"
     href="https://github.com/carbon-design-system/carbon/tree/master/packages/react"
     >
 
@@ -85,8 +73,19 @@ building websites and user interfaces. See a
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     color="dark"
-    subTitle="Carbon Components Angular"
+    subTitle="Carbon Angular components"
     href="https://github.com/IBM/carbon-components-angular"
+    >
+
+<MdxIcon name="github" color="inverse" />
+
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4}  noGutterSm>
+  <ResourceCard
+    color="dark"
+    subTitle="Carbon Vanilla components"
+    href="https://github.com/carbon-design-system/carbon/tree/master/packages/components"
     >
 
 <MdxIcon name="github" color="inverse" />
@@ -96,7 +95,7 @@ building websites and user interfaces. See a
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     color="dark"
-    subTitle="Carbon Components Vue"
+    subTitle="Carbon Vue components"
     href="https://github.com/carbon-design-system/carbon-components-vue"
     >
 
