fix(data-table): fix isSortable examples

--- a/src/pages/components/data-table/code.mdx
+++ b/src/pages/components/data-table/code.mdx
@@ -92,9 +92,9 @@ usage documentation, see the Storybooks for each framework below.
     {`<DataTable
     rows={rowData}
     headers={headerData}
-    render={({ rows, headers, getHeaderProps }) => (
+    render={({ rows, headers, getHeaderProps, getTableProps }) => (
     <TableContainer title="DataTable">
-      <Table>
+      <Table {...getTableProps()}>
         <TableHead>
           <TableRow>
             {headers.map(header => (
@@ -132,9 +132,9 @@ usage documentation, see the Storybooks for each framework below.
     {`<DataTable
   rows={rowData}
   headers={headerData}
-  render={({ rows, headers, getHeaderProps, getSelectionProps, getRowProps }) => (
+  render={({ rows, headers, getHeaderProps, getSelectionProps, getRowProps, getTableProps }) => (
   <TableContainer title="DataTable with selection">
-    <Table>
+    <Table {...getTableProps()}>
       <TableHead>
         <TableRow>
           <TableSelectAll {...getSelectionProps()} />
