--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -171,7 +171,7 @@ icons, and search.
 #### Mouse
 
 The header element target areas span the full height of the header. See the
-style tab for detailed visual information about the various states.
+Style tab for detailed visual information about the various states.
 
 <Row>
 <Column colLg={12}>
