--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -33,7 +33,7 @@ The UI shell header is the foundation for navigating and orienting your user to
 your UI. The UI shell header can be used by itself or combined with the UI shell
 left and right panels for more complex UI navigation.
 
-The UI shell is made up of three components: The header, the
+The UI shell is made up of three components—the header, the
 [left panel](/components/UI-shell-left-panel/usage), and the
 [right panel](/components/UI-shell-right-panel/usage). All three can be used
 independently, but the components were designed to work together.
