--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -30,7 +30,7 @@ interaction patterns that persist between and across products.
 ## Overview
 
 The UI shell header is the foundation for navigating and orienting your user to
-your UI. The UI shell header can be used by itself or combined with the UI shell
+the UI. The UI shell header can be used by itself or combined with the UI shell
 left and right panels for more complex UI navigation.
 
 The UI shell is made up of three components—the header, the
