docs: editing, add new dev get started page

--- a/src/pages/help/certificate-of-originality.mdx
+++ b/src/pages/help/certificate-of-originality.mdx
@@ -3,9 +3,11 @@ title: Certificate of Originality
 description:
 ---
 
-## Certificate of Originality
+<PageDescription>
 
-This information is only relevant for IBM teams building with Carbon.
+This information is for IBM teams building with Carbon.
+
+</PageDescription>
 
 ### Carbon v10.x
 
