--- a/src/pages/help/migration-guide/design.mdx
+++ b/src/pages/help/migration-guide/design.mdx
@@ -9,7 +9,7 @@ tabs: ['Overview', 'Design', 'Develop']
 <PageDescription>
 
 The transition from v9 to v10 is primarily visual. The IBM color palette was
-updated between versions and a 16 column grid was introduced.
+updated between versions and a 16-column grid was introduced.
 
 </PageDescription>
 
@@ -54,7 +54,8 @@ available.
 #### Icons, pictograms, and the full IBM color palette
 
 To access the IBM Design Language icons, pictograms, and colors, subscribe to
-the [IBM Design Language libraries](/resources#color-grid-and-icons).
+the
+[IBM Design Language libraries](/designing/design-resources#color-grid-and-icons).
 
 #### Migrating to v10
 
@@ -140,13 +141,13 @@ workflow.
 ### Motion
 
 Carbon v10 adheres to IBM Design Language
-[motion standards](/guidelines/motion/basics), designed to bring unity and
+[motion standards](/guidelines/motion/overview), designed to bring unity and
 cohesion to all motion in a user interface. All interactions that include motion
 should abide by these standards.
 
 ### Layout, grid, and spacing
 
-Carbon v10 uses the 16 column [2x Grid](/guidelines/2x-grid/overview). Carbon
+Carbon v10 uses the 16-column [2x Grid](/guidelines/2x-grid/overview). Carbon
 v10 will default to the 12-column grid with an option to switch to the 16-column
 grid. Designers starting on new layouts using v10 should use the 16-column grid.
 
