--- a/src/pages/help/migration-guide/develop.mdx
+++ b/src/pages/help/migration-guide/develop.mdx
@@ -26,7 +26,7 @@ Carbon code now lives in a monorepo.
 [Carbon-themes](https://github.com/carbon-design-system/carbon-themes) was
 deprecated in v10, and the themes package
 [@carbon/themes](https://github.com/carbon-design-system/carbon/tree/master/packages/themes)
-now lives in the [Carbon](https://github.com/carbon-design-system/carbon) 
+now lives in the [Carbon](https://github.com/carbon-design-system/carbon)
 monorepo.
 
 <Row className="resource-card-group">
@@ -45,7 +45,7 @@ monorepo.
 ## Carbon components
 
 Carbon components were reskinned in v10. The redesign was conducted with maximum
-backwards-compatibility in mind. Users of v9 should be able to upgrade to v10
+backwards compatibility in mind. Users of v9 should be able to upgrade to v10
 automatically with minimal breakage.
 
 Detailed technical migration docs for Carbon components are available in the
@@ -123,7 +123,7 @@ download links, quick links for filing issues, module name, and relative path.
 <Column colLg={4} colMd={4} noGutterSm>
 <ResourceCard
     subTitle="Carbon icon package"
-    href="https://github.com/carbon-design-system/carbon/blob/master/packages/components/docs/migration/migrate-to-10.x.md"
+    href="https://github.com/carbon-design-system/carbon/tree/master/packages/icons"
     >
 
 <MdxIcon name="github" />
