--- a/src/pages/whats-happening/events/index.mdx
+++ b/src/pages/whats-happening/events/index.mdx
@@ -8,16 +8,15 @@ description:
 
 <PageDescription>
 
-The Carbon team is committed to making members of the community successful. Find
-events for learning what’s new, tips and tricks, and leveling up your skills.
+The Carbon team is committed to helping members of the community be successful.
+Find events for leveling up your skills, connecting with your peers, and getting
+reviews on work in progress.
 
 </PageDescription>
 
-This page is a work in progress. Need to add sign up / contact methods.
-
 ### Weekly design playback
 
-#### Every Friday, 2pm Central, One hour
+#### Every Friday, 11am Central, One hour
 
 You’ve got some work in progress and you’re ready to open it up and share it
 with a broader audience for honest (and caring!) feedback. Verify that you’re
