--- a/src/pages/developing/get-started.mdx
+++ b/src/pages/developing/get-started.mdx
@@ -1,75 +1,49 @@
 ---
 title: Get started
 description:
-  Get started developing with the Carbon Design System. We also support the
-  system in React, vanilla JS, Angular, and Vue.
+  Welcome to Carbon! If you're just starting out developing with Carbon, here's
+  a checklist of everything you need to get up and running.
 ---
 
 <!-- this page is a work in progresss -->
 
 <PageDescription>
 
-Welcome to Carbon! Get started developing in the Carbon Design System. The
-Carbon Design System is built React first. We also support core parts of the
-system in vanilla JS, Angular, and Vue and offer guidelines for other
-frameworks.
+Welcome to Carbon! If you're just starting out developing with Carbon, here's a
+checklist of everything you need to get up and running.
 
 </PageDescription>
 
 <AnchorLinks>
 
-<AnchorLink>Get started</AnchorLink>
-<AnchorLink>Tutorial</AnchorLink>
-<AnchorLink>Developer resources</AnchorLink>
+<AnchorLink>First steps</AnchorLink>
+<AnchorLink>Additional guidance</AnchorLink>
+<AnchorLink>Connect with us</AnchorLink>
 
 </AnchorLinks>
 
-## Get started
+## First steps
 
-<Row className="resource-card-group">
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="React"
-    href="frameworks/react"
-    >
+### Install your framework of choice
 
-<MdxIcon name="react" />
+The Carbon Design System is built React first. We also support core parts of the
+system in vanilla JS, Angular, and Vue and offer guidelines for other
+frameworks. Head over to [Frameworks](/developing/frameworks/react) for all the
+information you need to get started.
 
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-      subTitle="Angular (Community)"
-      href="frameworks/angular"
-      >
+### Check out our developer resources
 
-<MdxIcon name="angular" />
+In [Developer resources](/developing/dev-resources), you’ll find Carbon tools,
+as well as our GitHub repos and Storybooks for your framework of choice.
 
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-      subTitle="Vue (Community)"
-      href="frameworks/vue"
-      >
+## Additional guidance
 
-<MdxIcon name="vue" />
+### Take a tutorial, earn a badge
 
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-      subTitle="Other frameworks"
-      href="frameworks/other-frameworks"
-      / >
-</Column>
-</Row>
-
-## Tutorial
-
-We offer tutorials to help guide you in creating an app with the Carbon Design
-System. We’ll teach you the ins and outs of using Carbon components, while
-introducing web development best practices along the way.
+We offer tutorials in Angular, React, and Vue to guide you in creating an app
+with the Carbon Design System. We’ll teach you the ins and outs of using Carbon
+components, and introduce web development best practices along the way. Everyone
+who completes the tutorial will earn an IBM digital badge.
 
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
@@ -104,13 +78,37 @@ introducing web development best practices along the way.
 </Column>
 </Row>
 
-## Developer Resources
+### Learn about the IBM Design Language
 
-Here you’ll find Carbon tools, as well as our GitHub repos and Storybooks for
-your framework of choice.
+Carbon expresses the [IBM Design Language](https://www.ibm.com/design/language/)
+in product and delivers it through tools for designers and developers including
+guidance, tooling, components, and support. Take the time to read the site so
+that you fully understand what drives IBM’s design philosophy and principles,
+and can make informed decisions in your product work.
 
-<Row className="resource-card-group">
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard subTitle="Developer resources" href="dev-resources" />
-  </Column>
-</Row>
+## Connect with us
+
+### Join us and the Carbon community
+
+_For internal IBM only_: If you have a question about any aspect of the
+frameworks or tools, you can reach out to us on Slack and use that as a way to
+connect with your fellow developers. Chances are someone has had a similar
+question to you and will jump in to help you out.
+
+- [#carbon-design-system](https://ibm-studios.slack.com/messages/C0M053VPT/)
+- [#carbon-components](https://ibm-studios.slack.com/archives/C046Y0YUD)
+- [#carbon-elements](https://ibm-studios.slack.com/archives/CDHHNNZQR)
+- [#carbon-react](https://ibm-studios.slack.com/archives/C2K6RFJ1G)
+- [#carbon-ng](https://ibm-studios.slack.com/archives/CBZC0LM2N)
+- [#carbon-vue](https://ibm-studios.slack.com/archives/CAM5P6NR1)
+- [#carbon-tutorial](https://ibm-studios.slack.com/archives/CJUGA7P6H)
+
+And be sure to sign up for the latest Carbon news at
+[#carbon-announcements](https://ibm-studios.slack.com/archives/CJ35H36MP).
+
+### Learn about what we're doing
+
+You can also see the Carbon's latest changes and future plans on the
+[Changelog and roadmap](/whats-happening/changelog-and-roadmap) page.
+
+If you have questions, here are all the ways to [contact us](/help/contact-us).
