--- a/src/pages/help/contact-us/index.mdx
+++ b/src/pages/help/contact-us/index.mdx
@@ -26,19 +26,19 @@ already got your topic covered.
 
 ### Carbon website
 
-Please take some time to explore the content on this website before engaging the
-Carbon team. The site is comprehensive and most of the guidelines and components
-are well documented.
+As a first step, it's always good to explore the content on this website. The
+site is comprehensive and most of the guidelines and components are well
+documented.
 
 ### Frequently asked questions
 
 Answers to the most common questions about the design system can be found in the
 [Carbon FAQs](faqs).
 
+## Provide a suggestion or contribution
+
 The Carbon core team provides support for users of the design system. Find the
 use case below that most closely matches your own for the quickest response.
-
-## Provide a suggestion or contribution
 
 ### GitHub issues
 
@@ -57,9 +57,9 @@ GitHub issue.
 
 #### Code issues
 
-- [carbon-components](https://github.com/carbon-design-system/carbon/issues/new/choose)
 - [carbon-components-react](https://github.com/carbon-design-system/carbon/issues/new/choose)
 - [carbon-components-angular](https://github.com/IBM/carbon-components-angular/issues/new)
+- [carbon-components-vanilla](https://github.com/carbon-design-system/carbon/issues/new/choose)
 - [carbon-components-vue](https://github.com/carbon-design-system/carbon-components-vue/issues/new)
 - [carbon-charts](https://github.com/carbon-design-system/carbon-charts/issues/new)
 
@@ -75,10 +75,10 @@ the appropriate Carbon repo.
 _For internal IBM users only._ The Carbon core team maintains the following
 channels and will provide support as time permits.
 
-**Please try searching the Slack channel for your topic first.** Slack’s
-filtering feature will return more targeted and relevant results. For instance,
-if you have a technical question about the `DataTable` component, you could
-search “DataTable” in Slack and then filter by the #carbon-components channel.
+Try searching the Slack channel for your topic first. Slack’s filtering feature
+will return more targeted and relevant results. For instance, if you have a
+technical question about the `DataTable` component, you could search “DataTable”
+in Slack and then filter by the #carbon-components channel.
 
 _Tip: You can start a new search directly from the message box using the `/s`
 slash command._
