docs: get started updates

--- a/src/pages/designing/get-started.mdx
+++ b/src/pages/designing/get-started.mdx
@@ -83,8 +83,8 @@ And be sure to sign up for the latest Carbon news at
 
 ### Learn about what we're doing
 
-To read about Carbon's latest changes and future plans, check out
-[What's happening](/whats-happening/changelog-and-roadmap).
+You can find out about Carbon's latest changes and future plans on the
+[Changelog and roadmap](/whats-happening/changelog-and-roadmap) page.
 
 If you have questions, here are all the ways to [contact us](/help/contact-us).
 
