docs: add narrow grid mode code example (#1575)
* feat: add narrow grid code example

* docs: add note around when code was added for narrow

* fix: merge conflict

* fix: typo

* fix: grid styles

--- a/src/pages/guidelines/2x-grid/implementation.mdx
+++ b/src/pages/guidelines/2x-grid/implementation.mdx
@@ -648,24 +648,34 @@ Use vertical helpers here.
 
 <InlineNotification>
 
-**Note:** Code for the Narrow grid mode is currently using an outdated naming
-convention. We've disabled the attached code snippet until the class name can be
-updated to avoid confusion.
+**Note:** Code for the narrow grid mode was added in
+[v10.17.0](https://github.com/carbon-design-system/carbon/releases/tag/v10.17.0)
 
 </InlineNotification>
 
 <Row>
   <Column noGutterSm>
     <div className="grid-demo grid-demo--narrow">
-      <div class="bx-demo--grid">
+      <div class="bx-demo--grid bx-demo--grid--narrow">
         <div class="bx-demo--row">
-          <div class="bx-demo--col bx-demo--no-gutter--left"><div class="grid-demo-content"></div></div>
-          <div class="bx-demo--col bx-demo--no-gutter--left"><div class="grid-demo-content"></div></div>
-          <div class="bx-demo--col bx-demo--no-gutter--left"><div class="grid-demo-content"></div></div>
-          <div class="bx-demo--col bx-demo--no-gutter--left"><div class="grid-demo-content"></div></div>
+          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
+          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
+          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
+          <div class="bx-demo--col"><div class="grid-demo-content"></div></div>
         </div>
       </div>
     </div>
+
+```html
+<div class="bx--grid bx--grid--narrow">
+  <div class="bx--row">
+    <div class="bx--col"></div>
+    <div class="bx--col"></div>
+    <div class="bx--col"></div>
+    <div class="bx--col"></div>
+  </div>
+</div>
+```
 
   </Column>
 </Row>
