feat: add events page styling and images

--- a/src/pages/whats-happening/events/index.mdx
+++ b/src/pages/whats-happening/events/index.mdx
@@ -14,9 +14,17 @@ reviews on work in progress.
 
 </PageDescription>
 
-### Weekly design playback
+<Row className="events-list">
+<Column colLg={4} colMd={2}>
 
-#### Every Friday, 11am Central, One hour
+![](/images/events_design_playback.png)
+
+</Column>
+<Column colLg={7} colMd={5}>
+
+## Weekly design playback
+
+### Every Friday, 11am Central, One hour
 
 You’ve got some work in progress and you’re ready to open it up and share it
 with a broader audience for honest (and caring!) feedback. Verify that you’re
@@ -24,19 +32,58 @@ working with the grid correctly, that you’re using the right components, that
 you’re using the correct language. Sign up to share, or come along to see other
 work in progress and learn that way.
 
-### Carbon Insiders
+<CardGroup>
+  <MiniCard title="Sign up" href="#" actionIcon="launch" />
+</CardGroup>
 
-#### First Fridays, 9:30am Central, One hour
+</Column>
+</Row>
+<Row className="events-list">
+<Column colLg={4} colMd={2}>
+
+![](/images/events_insiders.png)
+
+</Column>
+<Column colLg={7} colMd={5}>
+
+## Carbon Insiders
+
+### First Fridays, 9:30am Central, One hour
 
 An open forum for developers in product teams to come together with Carbon
 developers and designers. Talk through questions, challenges, and share ideas
 for building products with Carbon. All topics welcome.
 
-### Design pin-ups
+<CardGroup>
+  <MiniCard
+    title="Contact us for more information"
+    href="#"
+    actionIcon="launch"
+  />
+</CardGroup>
 
-#### Contact us to schedule, Two + hours
+</Column>
+</Row>
+<Row className="events-list">
+<Column colLg={4} colMd={2}>
+
+![](/images/events_pinup.png)
+
+</Column>
+<Column colLg={7} colMd={5}>
+
+## Design pin-ups
+
+### Contact us to schedule, Two + hours
 
 Put your screens up in MURAL and step through the flow and page designs with the
 Carbon designers. Great for assessing the overall flow, page layouts, the best
 choices and use of components, content—everything from the big picture to the
 smallest detail!
+
+<CardGroup>
+  <MiniCard title="Contact us" href="#" actionIcon="launch" />
+</CardGroup>
+
+</Column>
+</Row>
