--- a/src/pages/whats-happening/events/index.mdx
+++ b/src/pages/whats-happening/events/index.mdx
@@ -50,7 +50,7 @@ work in progress and learn that way.
 
 ### First Fridays, 9:30am Central, One hour
 
-An open forum for developers in product teams to come together with Carbon
+An open forum for developers in IBM product teams to come together with Carbon
 developers and designers. Talk through questions, challenges, and share ideas
 for building products with Carbon. All topics welcome.
 
