update events page styling

--- a/src/pages/whats-happening/events/index.mdx
+++ b/src/pages/whats-happening/events/index.mdx
@@ -22,9 +22,11 @@ reviews on work in progress.
 </Column>
 <Column colLg={7} colMd={5}>
 
-## Weekly design playback
-
-### Every Friday, 11am Central, One hour
+<h2>
+  Weekly design playback
+  <br />
+  <span>Every Friday, 11am Central, One hour</span>
+</h2>
 
 You’ve got some work in progress and you’re ready to open it up and share it
 with a broader audience for honest (and caring!) feedback. Verify that you’re
@@ -46,9 +48,11 @@ work in progress and learn that way.
 </Column>
 <Column colLg={7} colMd={5}>
 
-## Carbon Insiders
-
-### First Fridays, 9:30am Central, One hour
+<h2>
+  Carbon Insiders
+  <br />
+  <span>First Fridays, 9:30am Central, One hour</span>
+</h2>
 
 An open forum for developers in IBM product teams to come together with Carbon
 developers and designers. Talk through questions, challenges, and share ideas
@@ -72,9 +76,11 @@ for building products with Carbon. All topics welcome.
 </Column>
 <Column colLg={7} colMd={5}>
 
-## Design pin-ups
-
-### Contact us to schedule, Two + hours
+<h2>
+  Design pin-ups
+  <br />
+  <span>Contact us to schedule, Two + hours</span>
+</h2>
 
 Put your screens up in MURAL and step through the flow and page designs with the
 Carbon designers. Great for assessing the overall flow, page layouts, the best
