doc: Events page content tweaks

--- a/src/pages/whats-happening/events/index.mdx
+++ b/src/pages/whats-happening/events/index.mdx
@@ -24,7 +24,7 @@ reviews on work in progress.
 
 <h2>
   Weekly design playback
-  <span>Every Friday, 11am Central, One hour</span>
+  <span>Fridays, 11am-12pm Central</span>
 </h2>
 
 You’ve got some work in progress and you’re ready to open it up and share it
@@ -53,12 +53,13 @@ work in progress and learn that way.
 
 <h2>
   Carbon Insiders
-  <span>First Fridays, 9:30am Central, One hour</span>
+  <span>First Fridays, 9:30am-10:30am Central</span>
 </h2>
 
-An open forum for developers in IBM product teams to come together with Carbon
-developers and designers. Talk through questions, challenges, and share ideas
-for building products with Carbon. All topics welcome.
+_For IBMers only:_ A monthly meeting for developers in IBM product teams to come
+together with other Carbon developers and designers. Talk through questions,
+challenges, and share ideas for building products with Carbon. All topics
+welcome.
 
 <CardGroup>
   <MiniCard
@@ -80,13 +81,13 @@ for building products with Carbon. All topics welcome.
 
 <h2>
   Design pin-ups
-  <span>Contact us to schedule, Two + hours</span>
+  <span>Contact us to schedule</span>
 </h2>
 
 Put your screens up in MURAL and step through the flow and page designs with the
 Carbon designers. Great for assessing the overall flow, page layouts, the best
 choices and use of components, content—everything from the big picture to the
-smallest detail!
+smallest detail! Usually two or more hours.
 
 <CardGroup>
   <MiniCard
