docs: get started updates

--- a/src/pages/developing/get-started.mdx
+++ b/src/pages/developing/get-started.mdx
@@ -106,6 +106,13 @@ question to you and will jump in to help you out.
 And be sure to sign up for the latest Carbon news at
 [#carbon-announcements](https://ibm-studios.slack.com/archives/CJ35H36MP).
 
+### Join us at Carbon Insiders
+
+_For IBMers only:_ We run a monthly meeting for IBM product teams to come
+together with other Carbon developers and designers. Talk through questions,
+challenges, and share ideas for building products with Carbon. See more details
+on our [Events](/whats-happening/events) page.
+
 ### Learn about what we're doing
 
 You can find out about Carbon's latest changes and future plans on the
