[content] update UI icon production guidance (#1600)
* update UI icon production guidance

updating production guidance to match updates on IDL

* Update src/pages/guidelines/icons/contribute.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>
Co-authored-by: Alison Joseph <alisonejoseph@Gmail.com>
Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/guidelines/icons/contribute.mdx
+++ b/src/pages/guidelines/icons/contribute.mdx
@@ -39,8 +39,8 @@ guidelines to ensure visual consistency and proper formatting.
 
 ## Making an icon
 
-- Create a 16 x 16 or 32 x 32 px artboard for each icon.
-- 16 px icons should have 1 px padding. 32 px icons should have 2 px padding.
+- Create a 32px x 32px artboard for each icon.
+- 32 px icons should have 2 px padding.
 - Set your workspace up from the start to snap to pixels and round values to
   whole pixels to avoid correcting shapes later.
 - Never use center borders. Centering can cause half pixels.
@@ -59,8 +59,7 @@ guidelines to ensure visual consistency and proper formatting.
 ### Production-ready
 
 To be considered production-ready, all icon submissions must be delivered in SVG
-format at 16 x 16 px (for integration with Carbon components) or 32 x 32 (for
-service icons).
+format at 32px x 32px for integration with Carbon components.
 
 - Icons should be at whole pixels. No decimals are allowed in x and y
   coordinates or width and height fields.
@@ -70,27 +69,9 @@ service icons).
 
 ## Exporting SVGs
 
-### Export SVGs from Sketch.
-
-1. Draw a 16 x 16 or 32 x 32 px artboard. 16 px icons should have 1 px padding.
-   32 px icons should have 2 px padding.
-2. Place the icon squarely on the artboard, making sure it's aligned to the
-   pixel grid.
-3. Convert all strokes to outlines `(Shift + ⌘ + O)`
-4. Select any overlapping shapes and click the Union icon from the top
-   navigation to merge all of the shapes together.
-5. Make sure the icon is at `#000000` and has no additional styling.
-6. Select the entire artboard (not just the icon).
-7. Click `Make Exportable` at the bottom of the right toolbar in Sketch.
-8. In the `Export` widget select "SVG" in the format dropdown.
-9. Click `Export 'Artboard-Name'`.
-10. Name icon with the `#name--modifier` convention _(i.e._ `copy.svg`,
-    `copy--glyph.svg`, `add.svg`, `add--glyph.svg`).
-
 ### Export SVGs from Adobe Illustrator.
 
-1. Draw a 16 x 16 or 32 x 32 px artboard. 16 px icons should have 1 px padding.
-   32 px icons should have 2 px padding.
+1. Draw a 32px x 32px artboard. 32px icons should have 2px padding.
 2. Place the icon squarely on the artboard, making sure it's aligned to the
    pixel grid.
 3. Expand all strokes `Object` → `Expand`.
