add en dashes to events page

--- a/src/pages/whats-happening/events/index.mdx
+++ b/src/pages/whats-happening/events/index.mdx
@@ -24,7 +24,7 @@ reviews on work in progress.
 
 <h2>
   Weekly design playback
-  <span>Fridays, 11am-12pm Central</span>
+  <span>Fridays, 11am–12pm Central</span>
 </h2>
 
 You’ve got some work in progress and you’re ready to open it up and share it
@@ -53,7 +53,7 @@ work in progress and learn that way.
 
 <h2>
   Carbon Insiders
-  <span>First Fridays, 9:30am-10:30am Central</span>
+  <span>First Fridays, 9:30am–10:30am Central</span>
 </h2>
 
 _For IBMers only:_ A monthly meeting for developers in IBM product teams to come
