remove mini-card, add buttons to events page

--- a/src/pages/whats-happening/events/index.mdx
+++ b/src/pages/whats-happening/events/index.mdx
@@ -6,6 +6,9 @@ description:
   skills.
 ---
 
+import { Button } from 'carbon-components-react';
+import { ArrowRight16 } from '@carbon/icons-react';
+
 <PageDescription>
 
 The Carbon team is committed to helping members of the community be successful.
@@ -33,13 +36,12 @@ working with the grid correctly, that you’re using the right components, that
 you’re using the correct language. Sign up to share, or come along to see other
 work in progress and learn that way.
 
-<CardGroup>
-  <MiniCard
-    title="Email us"
-    href="mailto:carbon@us.ibm.com"
-    actionIcon="launch"
-  />
-</CardGroup>
+<Button
+  kind="tertiary"
+  renderIcon={ArrowRight16}
+  onClick={() => (window.location.href = 'mailto:email@gmail.com')}>
+  Email us
+</Button>
 
 </Column>
 </Row>
@@ -61,13 +63,12 @@ together with other Carbon developers and designers. Talk through questions,
 challenges, and share ideas for building products with Carbon. All topics
 welcome.
 
-<CardGroup>
-  <MiniCard
-    title="Email us"
-    href="mailto:carbon@us.ibm.com"
-    actionIcon="launch"
-  />
-</CardGroup>
+<Button
+  kind="tertiary"
+  renderIcon={ArrowRight16}
+  onClick={() => (window.location.href = 'mailto:email@gmail.com')}>
+  Email us
+</Button>
 
 </Column>
 </Row>
@@ -89,13 +90,12 @@ Carbon designers. Great for assessing the overall flow, page layouts, the best
 choices and use of components, content—everything from the big picture to the
 smallest detail! Usually two or more hours.
 
-<CardGroup>
-  <MiniCard
-    title="Email us"
-    href="mailto:carbon@us.ibm.com"
-    actionIcon="launch"
-  />
-</CardGroup>
+<Button
+  kind="tertiary"
+  renderIcon={ArrowRight16}
+  onClick={() => (window.location.href = 'mailto:email@gmail.com')}>
+  Email us
+</Button>
 
 </Column>
 </Row>
