--- a/src/pages/contributing/bugs-and-requests.mdx
+++ b/src/pages/contributing/bugs-and-requests.mdx
@@ -65,5 +65,5 @@ appropriate. Read more about our
 
 ## Need more help?
 
-If you have more questions about issues or requesting a features, there are
+If you have more questions about issues or requesting features, there are
 multiple ways to reach us at [Contact us](/help/contact-us).
