Apply suggestions from code review
Thanks @jillianhowarth!

Co-authored-by: jillianhowarth <jillianlovesdogs@gmail.com>

--- a/src/pages/community/patterns/generate-an-api-key/index.mdx
+++ b/src/pages/community/patterns/generate-an-api-key/index.mdx
@@ -154,7 +154,7 @@ instructions for doing so.
 
 #### API key cannot be retrieved at a later date
 
-If a user cannot retrieve the API key in future, warn them in the modal. Provide
+If a user cannot retrieve the API key in the future, warn them in the modal. Provide
 the user the option to download the key as JSON.
 
 <Row>
@@ -176,7 +176,7 @@ Restricted access allows a user to assign specific access control and
 permissions before the API key is generated.
 
 Restricted access options vary widely and are not specified in this pattern.
-Options should be provided in the modal, **before** the user clicks generate. To
+Options should be provided in the modal **before** the user clicks generate. To
 avoid scrolling in the modal, a multi-step modal can be used, with a progress
 indicator.
 
@@ -238,7 +238,7 @@ The user may also need the option to generate a new API key.
 </Column>
 </Row>
 
-## API key managment page (Optional)
+## API key management page (Optional)
 
 Some products and platforms may include an API key management page. This is a
 central location where API keys can be created, reviewed, or edited.
