update dev resources links

--- a/src/pages/developing/dev-resources/index.mdx
+++ b/src/pages/developing/dev-resources/index.mdx
@@ -15,10 +15,10 @@ your framework of choice.
 ### GitHub repos
 
 <Row className="resource-card-group">
-<Column colLg={4} colMd={4} noGutterSm>
+  <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Carbon React components"
-    href="https://github.com/carbon-design-system/carbon-components-react"
+    subTitle="Carbon"
+    href="https://github.com/carbon-design-system/carbon"
     >
 
 <MdxIcon name="github" />
@@ -27,7 +27,17 @@ your framework of choice.
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Carbon Angular components"
+    subTitle="Carbon React"
+    href="https://github.com/carbon-design-system/carbon/tree/master/packages/react"
+    >
+
+<MdxIcon name="github" />
+
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Carbon Angular"
     href="https://github.com/IBM/carbon-components-angular"
     >
 
@@ -37,28 +47,8 @@ your framework of choice.
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Carbon Vanilla components"
-    href="https://github.com/carbon-design-system/carbon-components"
-    >
-
-<MdxIcon name="github" />
-
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Carbon Vue components"
+    subTitle="Carbon Vue"
     href="https://github.com/carbon-design-system/carbon-components-vue"
-    >
-
-<MdxIcon name="github" />
-
-  </ResourceCard>
-</Column>
-<Column colLg={4} colMd={4}  noGutterSm>
-  <ResourceCard
-    subTitle="Carbon boilerplate"
-    href="https://github.com/carbon-design-system/carbon-boilerplate"
     >
 
 <MdxIcon name="github" />
@@ -67,7 +57,7 @@ your framework of choice.
 </Column>
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
-    subTitle="Carbon Charts Core"
+    subTitle="Carbon Charts core"
     href="https://github.com/carbon-design-system/carbon-charts/tree/master/packages/core">
     <MdxIcon name="github" />
   </ResourceCard>
