docs: updates re Carbon Insiders

--- a/src/pages/whats-happening/events/index.mdx
+++ b/src/pages/whats-happening/events/index.mdx
@@ -58,10 +58,9 @@ work in progress and learn that way.
   <span>First Fridays, 9:30am–10:30am Central</span>
 </h2>
 
-_For IBMers only:_ A monthly meeting for developers in IBM product teams to come
-together with other Carbon developers and designers. Talk through questions,
-challenges, and share ideas for building products with Carbon. All topics
-welcome.
+_For IBMers only:_ A monthly meetup for all teams who are building on top of
+Carbon to discuss best practices, areas to consolidate, and things Carbon can do
+to make your jobs easier.
 
 <Button
   kind="tertiary"
